set the position of the toggle theme button to fixed and a z-index of 10

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 .theme-button {
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
+  z-index: 10;
 }
 
 body {
